[package]
name = "freemkv"
version = "0.31.0"
edition = "2024"
rust-version = "1.86"
license = "AGPL-3.0-only"
description = "Open source 4K UHD / Blu-ray / DVD backup tool"
repository = "https://github.com/freemkv/freemkv"
readme = "README.md"
keywords = ["bluray", "uhd", "dvd", "ripper", "backup"]
categories = ["command-line-utilities", "multimedia"]
exclude = ["CLAUDE.md"]

[[bin]]
name = "freemkv"
path = "src/main.rs"

[dependencies]
libfreemkv = "0.31"
freemkv-keysources = "0.31"
isolang = "2"
tracing-subscriber = "0.3"
ureq = { version = "2", features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
serde_json = "1"
libc = "0.2"
# Global allocator. The mux consumer thread frees PesPacket buffers
# whose backing Vec<u8> was allocated by the demux thread — musl's
# mallocng cross-thread free path was visibly slowing the null://
# benchmark relative to autorip (which already uses mimalloc).
# Matching allocators across binaries makes perf numbers comparable.
mimalloc = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
