[package]
name = "freemkv"
version = "1.0.0-rc.4.2"
edition = "2024"
rust-version = "1.86"
license = "AGPL-3.0-only"
description = "Open source 4K UHD / Blu-ray / DVD backup tool"
repository = "https://github.com/freemkv/freemkv"
readme = "README.md"
keywords = ["bluray", "uhd", "dvd", "ripper", "backup"]
categories = ["command-line-utilities", "multimedia"]
exclude = ["CLAUDE.md"]

[[bin]]
name = "freemkv"
path = "src/main.rs"

[dependencies]
libfreemkv = "1.0.0-rc.4.2"
freemkv-unlock-ld = { git = "https://github.com/freemkv/freemkv-unlock", tag = "v1.0.0-rc.4.3" }
freemkv-keysources = "1.0.0-rc.4.2"
isolang = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ureq = { version = "2", features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
serde_json = "1"
libc = "0.2"
# Global allocator. The mux consumer thread frees PesPacket buffers
# whose backing Vec<u8> was allocated by the demux thread — musl's
# mallocng cross-thread free path was visibly slowing the null://
# benchmark relative to autorip (which already uses mimalloc).
# Matching allocators across binaries makes perf numbers comparable.
mimalloc = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1

# Resolve libfreemkv + freemkv-keysources from their GIT TAGS instead of
# crates.io, so a release build starts the instant those tags exist — it no
# longer waits on the crates.io publish + index propagation (the old serial
# chain). crates.io publish still happens (for external consumers) but as an
# independent parallel job; this binary no longer depends on it.
#
# This [patch.crates-io] is committed (CI-visible) and applies to BOTH the
# direct deps above AND the transitive references that freemkv-unlock-ld and
# freemkv-keysources make to libfreemkv via crates.io — unifying every
# libfreemkv ref to the single git-tag source (no duplicate crate, no
# trait-identity mismatch).
#
# The release script rewrites these tags to the new version before
# regenerating Cargo.lock. Local dev overrides this
# patch with a path patch via the gitignored .cargo/config.toml (a config-level
# [patch.crates-io] wins over this manifest one for the same crate).
[patch.crates-io]
libfreemkv = { git = "https://github.com/freemkv/libfreemkv", tag = "v1.0.0-rc.4.2" }
freemkv-keysources = { git = "https://github.com/freemkv/freemkv-keysources", tag = "v1.0.0-rc.4.2" }
